--- a/gb/6/10/9/n1480515.md
+++ b/gb/6/10/9/n1480515.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/upuqsh2796/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/upuqsh2796/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/upuqsh2796/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/upuqsh2796/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/upuqsh2796/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dsc2569/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dsc2569/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dsc2569/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dsc2569/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dsc2569/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dsc2569/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>曾国藩成功的三大原因</h2>
-
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/b221237e0b5d62c0fb74af3637314066-320x200.jpg" />
 <h6></h6>
 <hr>
-<p>【大纪元10月9日讯】<a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E6%9B%BE%E5%9B%BD%E8%97%A9.md">曾国藩</a>最大的成功原因，指导曾国藩思想理论基础，是中国的哲学阴阳调和。曾国藩在三十岁的时候，就将易经读通了，他多次在家书中说到自己在易经里读通了一个道理“削息赢满”，也就是易经说的一阴一阳为之道。</p>
-<p><B><a href="https://github.com/upuqsh2796/djy/blob/master/gb/tag/%E6%9B%BE%E5%9B%BD%E8%97%A9.md">曾国藩</a>简介</B></p>
+<p>【大纪元10月9日讯】<ahref="https://github.com/dsc2569/djy/blob/master/gb/tag/%E6%9B%BE%E5%9B%BD%E8%97%A9.md#1">曾国藩</a>最大的成功原因，指导曾国藩思想理论基础，是中国的哲学阴阳调和。曾国藩在三十岁的时候，就将易经读通了，他多次在家书中说到自己在易经里读通了一个道理“削息赢满”，也就是易经说的一阴一阳为之道。</p>
+<p><B><ahref="https://github.com/dsc2569/djy/blob/master/gb/tag/%E6%9B%BE%E5%9B%BD%E8%97%A9.md#1">曾国藩</a>简介</B></p>
 <p>曾国藩( 1811~ 1872)晚清重臣，湘军创立者和统帅。初名子城，字伯函，号涤生。出生于湖南省双峰县(原属湘乡)荷叶镇。道光十八年(1838)中进士，入翰林院，为军机大臣穆彰阿门生。累迁内阁学士，礼部侍郎，署兵、工、刑、吏部侍郎。与大学士倭仁、徽宁道何桂珍等为密友，以“实学”相砥砺。平时有感于政治废弛，主张以理学经世。</p>
 <p>咸丰二年(1852)，太平军由广西进军湖南，清廷震恐。适曾国藩因母丧在籍，奉旨前往长沙，帮同湖南巡抚办理团练。遂招募农民为营勇，任用儒生为将佐，朝夕训练，号“湘勇”(通称湘军)。1854年初，湘军练成水陆师1.7万余人，会集湘潭，誓师出战。湘军初战，连败于岳州(今湖南岳阳)、靖港，曾国藩为此愤不欲生，投水自杀，被其左右救起。后重整军实，复占岳州，攻陷湖北省城武昌，奉诏署湖北巡抚。此后用兵更为谨慎。旋因朝廷恐其于地方势大，又被解署任，以后长期只以侍郎虚衔领兵。1855年初，进攻江西九江、湖口，被太平军重创，退守南昌。1858年6月，曾国藩奉诏出办浙江军务。1860年清军江南大营彻底败溃后，加兵部尚书衔，授两江总督，以钦差大臣督办江南军务。从此，不但拥有兵权，而且掌握地方大权。</p>
 <p><B>中国智慧之一：人格修炼</B></p>
@@ -32,37 +32,50 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/6/10/9/n1480515.htm">曾国藩成功的三大原因</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/13/n11866673.htm">【诗仙李白】之七：闲与仙人扫落花</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/13/n11866593.htm">【诗仙李白】之六：琴心三叠道初成</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/27/n11825542.htm">【诗仙李白】之五：凤凰台上凤凰游</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/15/n11871826.htm">【罗厨寻味】红烧牛尾</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886677.htm">【唐靖远快评】北京2月底须控制疫情的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11881049.htm">【新闻看点】疫情严峻3方甩锅 川普为习说好话</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878231.htm">新冠病毒假阴性或有4大原因 会带来何风险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/5/9/3/n1040587.md#1">【传统文化】古代家训博览（1）</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/5/11/7/n1110650.md#1">历史上的今天（11月7日）</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/6/3/24/n1265613.md#1">巫石吉: 浅谈弘一大师的修练志心</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/6/3/26/n1267211.md#1">巫石吉: 一代贤哲的风骨</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/6/3/30/n1271437.md#1">辛灏年:中华百年歌</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/6/7/25/n1398233.md#1">梁治：文革是不可能获得反思的</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/6/8/1/n1405796.md#1">2006夏日真正的喜悦</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/6/8/6/n1412570.md#1">历史上的今天（8月7日）</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/3/20/n11959301.md#1">费英东是翼宿星君？努尔哈赤功臣的传说</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/19/10/29/n11620661.md#1">“一往情深”是说爱情吗？</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/upuqsh2796/djy/blob/master/gb/6/10/9/n1480515.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/upuqsh2796/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/upuqsh2796/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/upuqsh2796/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/8/n11372651.md#1" target="_blank">新州：豢养特务作恶 中共卑鄙无耻</a></li><li><a href="https://github.com/dsc2569/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/7/5/13/n1708504.md#1" target="_blank">李洪志先生传法15年重要史实及辉煌历程</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/10/n12097175.md#1">天才预言家珍妮  2020年大决战预言</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/13/7/18/n3919814.md#1">米开朗基罗（8）《创世纪》（下）</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/4/6/n12007049.md#1">天人预言未来事  识破妖精本色</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/12/n12102655.md#1">修道人半途而废 入红尘数年后惊见道友功成</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/4/25/n12061244.md#1">贾宝玉和薛宝钗的金玉之缘</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12115092.md#1">【新闻看点】病毒有眼睛：联合国的红色背景</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/14/n12109244.md#1">【胡乃文开讲】揉揉腹部3分钟 宿便排干净 中医教你解腹痛</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12113607.md#1">【拍案惊奇】金胖又失踪 反送中首例港人被判4年</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12110809.md#1">【十字路口】美中要全面脱钩 中国五大经济警讯</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12112087.md#1">致敬李洪志先生 美议员授予513国会国旗</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113099.md#1">川普称可切断“美中关系” 赵立坚软化回应</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12115144.md#1">对台湾赞不绝口 黄秋生：我的兄弟也要移民了</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12110814.md#1">IU半个月三度捐款助人 生日前夕短发受关注</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12114166.md#1">崔智友本日迎来女儿出生 母女均安</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/16/n12114576.md#1">主持遇险惊魂 张凤书长达10年没接外景</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12113316.md#1">半百年纪十天练出腹肌 李若彤分享冻龄术</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12110895.md#1">女子濒死见上帝和耶稣 恳求还阳终获重生</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/2/n12078599.md#1">脂肪肝成慢性肝病首位 4种方法防治</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/15/n12111172.md#1">2020年全球最佳机场前10名 日本占了4个</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/13/n12106133.md#1">疫苗真是中共病毒解药？问世面临三大疑问</a></li>
+<li><a href="https://github.com/dsc2569/djy/blob/master/gb/20/5/14/n12109244.md#1">【胡乃文开讲】揉揉腹部3分钟 宿便排干净 中医教你解腹痛</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/dsc2569/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/dsc2569/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/6/10/9/n1480515.htm">曾国藩成功的三大原因</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dsc2569/djy/blob/master/gb/6/10/9/n1480515.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dsc2569/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dsc2569/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dsc2569/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dsc2569/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dsc2569/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
